--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -23,7 +24,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "format": "npx prettier --write src/* "
   },
   "eslintConfig": {
     "extends": [
